--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "markdown-it-katex": "^2.0.3",
     "marked": "^15.0.12",
     "marked-katex-extension": "^5.1.4",
+    "mdui": "^2.1.4",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
