--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "markdown-it": "^14.1.0",
-    "markdown-it-katex": "^2.0.3",
+    "markdown-it-latex": "^0.2.0",
     "marked": "^15.0.12",
     "marked-katex-extension": "^5.1.4",
     "mdui": "^2.1.4",
@@ -30,6 +29,7 @@
     "@playwright/test": "^1.51.1",
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
@@ -44,6 +44,9 @@
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
+    "katex": "^0.16.22",
+    "markdown-it": "^14.1.0",
+    "markdown-it-katex": "^2.0.3",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.16.0",
     "prettier": "3.5.3",
